2011-01-20  Nate Chapin  <japhet@chromium.org>

        Reviewed by Darin Fisher.

        [V8] Call malloc and memcpy directly instead of
        of strdup in convertV8ObjectToNPVariant() when
        converting strings. If there is a null character
        in the string, our use of strdup causes us to allocate
        too little memory, leading to out of bounds reads.

        https://bugs.webkit.org/show_bug.cgi?id=52631

        * bindings/v8/V8NPUtils.cpp:
        (WebCore::convertV8ObjectToNPVariant):

2011-01-20  Andreas Kling  <kling@webkit.org>

        Reviewed by Ariya Hidayat.

        [Qt] Fill shadow scratch buffer with proper transparent pixels

        QImage::fill() has no Qt::GlobalColor overload in Qt 4.7 (coming in 4.8)
        so doing QImage::fill(Qt::transparent) will actually fill all pixels with
        the RGBA value 0x00000013.

        * platform/graphics/qt/ContextShadowQt.cpp:
        (WebCore::ShadowBuffer::scratchImage):

2011-01-19  Adam Roben  <aroben@apple.com>

        Remove WKCACFContextFlusher

        It wasn't doing anything.

        Fixes <http://webkit.org/b/52752> WKCACFContextFlusher is unused

        Reviewed by Simon Fraser.

        * WebCore.vcproj/WebCore.vcproj: Removed WKCACFContextFlusher. Also let VS have its way with
        the file.

        * platform/graphics/win/WKCACFContextFlusher.cpp: Removed.
        * platform/graphics/win/WKCACFContextFlusher.h: Removed.

        * platform/graphics/win/WKCACFLayerRenderer.cpp:
        (WebCore::WKCACFLayerRenderer::~WKCACFLayerRenderer):
        (WebCore::WKCACFLayerRenderer::layerTreeDidChange):
        Stop telling WKCACFContextFlusher about our context, since it never did anything with it.

2011-01-19  Adam Roben  <aroben@apple.com>

        Only flush our own context when we get resized

        Fixes <http://webkit.org/b/52751> All WKCACFContexts with uncommitted
        changes get flushed whenever any composited page is resized
